fix most of i18n malformed strings

--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -57,11 +57,8 @@
 
     <!-- Hide elements that require JS when scripting is disabled; only works when inline styling is allowed -->
     <noscript>
-      <style>
-        .js-required {
-          display: none !important;
-        }
-      </style>
+      {* NOTE: formatting for the i18n crawler *}
+      <style>.js-required {display: none !important;}</style>
     </noscript>
   </head>
 
