--- a/assets/views/rankingCalendar.jet.html
+++ b/assets/views/rankingCalendar.jet.html
@@ -4,6 +4,7 @@
 <div class="row justify-content-center g-4">
   <h1 class="text-center"><i class="bi bi-calendar me-2"></i>Ranking calendar</h1>
 
+  {* NOTE: temporarily disabled to prevent malformed strings from appearing in i18n
   <noscript>
     <div class="col-12">
       <div class="custom-card bg-charcoal-surface1 p-4 mb-4">
@@ -54,6 +55,7 @@
       </div>
     </div>
   </noscript>
+  *}
 
   <div class="col-12" id="checkpoint">
     <div class="custom-card">
