--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -32,8 +32,7 @@
                 <li class="list-group-item bg-charcoal-surface1 pt-0 pb-4 px-0">
                   <h3 class="mb-3">Log in</h3>
                   <p>
-                    Log in with your Pixiv account's cookie to access the features below. To learn how to obtain your cookie, please see
-                    <a href="https://pixivfe-docs.pages.dev/obtaining-pixivfe-token/">the guide on obtaining your PixivFE token</a>.
+                    Log in with your Pixiv account's cookie to access the features below. To learn how to obtain your cookie, please see <a href="https://pixivfe-docs.pages.dev/obtaining-pixivfe-token/">the guide on obtaining your PixivFE token</a>.
                   </p>
                   <p>Supported features (for now):</p>
                   <ul class="mb-3">
