--- a/assets/views/error.jet.html
+++ b/assets/views/error.jet.html
@@ -13,8 +13,7 @@
         {{- .Error }}
         </pre>
         </code>
-        <p>If you think this error should not occur, you can help
-            us by submitting an issue to the <a href="https://codeberg.org/VnPower/PixivFE/issues/new">upstream repository</a>!
+        <p>If you think this error should not occur, you can help us by submitting an issue to the <a href="https://codeberg.org/VnPower/PixivFE/issues/new">upstream repository</a>!
         </p>
         <a role="button" href="/" class="btn custom-btn-secondary">
           <i class="bi bi-house-fill me-2"></i>Go back to the home page
