fix broken ranking page

--- a/assets/views/rank.jet.html
+++ b/assets/views/rank.jet.html
@@ -51,7 +51,7 @@
             </div>
             {{- end }}
             {{- if Content == "all" || Content == "illust" || Content == "manga" }}
-            {* NOTE: formatting for the i18n crawler *}
+            <!-- NOTE: formatting for the i18n crawler -->
             <p class="small text-body-secondary mb-4">
               Choose the time frame for the rankings.
             </p>
