--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -118,15 +118,15 @@
 
 </div>
 
-<!-- TODO: check whether there actually are any related works before rendering this section -->
-<!-- col-12 to display Related works at full width -->
+{{- if len(.Illust.RelatedWorks) > 0 }}
 <div class="col-12 mt-5">
-    <h2>Related works</h2>
-    <!-- Gradually increase the number of artworks shown per row along with device width -->
-    <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-4">
-        {{- include "fragments/small-tn" .Illust.RelatedWorks }}
-    </div>
+  <h2>Related works</h2>
+  <!-- Gradually increase the number of artworks shown per row along with device width -->
+  <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-4">
+    {{- include "fragments/small-tn" .Illust.RelatedWorks }}
+  </div>
 </div>
+{{- end }}
 
 </div>
 {{- end }}
