--- a/assets/views/user.jet.html
+++ b/assets/views/user.jet.html
@@ -103,7 +103,7 @@
 
   <!-- Pagination -->
   {{- url := "/users/" + .User.ID + "/" + .Category + "?page="}}
-  {{- paginationData := createPaginator(url, "#checkpoint", .Page, -1, 1, 5) }}
+  {{- paginationData := createPaginator(url, "#checkpoint", .Page, .PageLimit, 1, 5) }}
   {{- yield pagination(data=paginationData) }}
 </div>
 {{- end }}
