--- a/assets/views/blocks/underlinenav.jet.html
+++ b/assets/views/blocks/underlinenav.jet.html
@@ -24,7 +24,7 @@
     Tip: For absolute URI paths, start the baseURL with a forward slash.
 *}
 
-{{- block UnderlineNav(baseURL, paths, names, categoryCounts, activeState="") }}
+{{- block UnderlineNav(baseURL, paths, names, activeState="") }}
 <ul class="nav nav-underline">
     {{- range i, k := paths }}
       <li class="nav-item">
