--- a/assets/views/user.jet.html
+++ b/assets/views/user.jet.html
@@ -1,6 +1,6 @@
 {{- extends "layout/default" }}
 {{- import "blocks/pagination" }}
-{{- import "blocks/underlinenav" }}
+{{- import "blocks/underlinenavUser" }}
 {{- block body() }}
 <div class="row justify-content-center g-4">
   <!-- NOTE: mb-5 used here to give the underlinenav a bit more space at the cost of some consistency -->
