--- a/assets/views/user.jet.html
+++ b/assets/views/user.jet.html
@@ -91,6 +91,7 @@
       </div>
       {{- end }}
 
+      {* TODO: the following doesn't do anything; .User.Novels isn't populated unless UserArtCategory is UserArt_Novel *}
       {{ if .User.Novels != 0 }}
       <div class="row row-cols-1 row-cols-lg-2 g-4">
         {{- range .User.Novels }}
