rm nonsensical day names on rank cal on small devices

--- a/assets/views/rankingCalendar.jet.html
+++ b/assets/views/rankingCalendar.jet.html
@@ -89,7 +89,7 @@
         {{- include "fragments/rankingCalendarNav" . }}
 
         <!-- The ranking calendar itself -->
-        <div class="row text-center fw-bold mb-3">
+        <div class="row text-center fw-bold d-none d-lg-flex mb-3">
           <div class="col">Sun</div>
           <div class="col">Mon</div>
           <div class="col">Tue</div>
