--- a/assets/views/blocks/pagination.jet.html
+++ b/assets/views/blocks/pagination.jet.html
@@ -2,6 +2,8 @@
 <!-- Pagination navigation block -->
 <nav aria-label="Page navigation">
   <div class="d-flex flex-column align-items-center justify-content-center">
+    <!-- Only show pagination if there are pages -->
+    {{ if len(data.Pages) > 0 }}
     <!-- Pagination dropdown -->
     <div class="js-required dropup mb-3">
       <button class="custom-btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -60,6 +62,13 @@
         <li class="page-item disabled"><span class="page-link">Next</span></li>
       {{ end }}
     </ul>
+    {{ else }}
+    <div class="alert alert-dark w-auto my-5" role="alert">
+      <p class="text-center mb-0">
+        No items to display.
+      </p>
+    </div>
+    {{ end }}
   </div>
 </nav>
 {{- end }}
