theme rework wip

--- a/assets/css/bootstrap-style.scss
+++ b/assets/css/bootstrap-style.scss
@@ -97,10 +97,22 @@ $aspect-ratios: (
 // Add a custom color to $theme-colors
 $custom-colors: (
   "custom-color": #7aa2f7,
-  "charcoal-surface1": #1f1f1f,
-  "charcoal-surface2": #3a3a3a,
+  "charcoal-surface1": #262626,
+  "charcoal-surface2": #525252,
   "beige": #f5f5dc,
   "off-white": #fff8eb,
+  /// Tailwind colors below
+  "neutral-50": #fafafa,
+  "neutral-100": #f5f5f5,
+  "neutral-200": #e5e5e5,
+  "neutral-300": #d4d4d4,
+  "neutral-400": #a3a3a3,
+  "neutral-500": #737373,
+  "neutral-600": #525252,
+  "neutral-700": #404040,
+  "neutral-800": #262626,
+  "neutral-900": #171717,
+  "neutral-950": #0a0a0a,
 );
 $theme-colors: map-merge($theme-colors, $custom-colors);
 
