--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -62,7 +62,7 @@
     </noscript>
   </head>
 
-  <body class="bg-black">
+  <body class="bg-neutral-900">
     <div id="loading-indicator" class="fixed-top z-3"></div>
     <!-- mb-4 for spacing between the navbar and main content -->
     <nav class="navbar bg-charcoal-surface1 py-3 mb-4" id="main-navbar">
