--- a/assets/css/bootstrap-style.scss
+++ b/assets/css/bootstrap-style.scss
@@ -145,6 +145,16 @@ $utilities: map-merge(
 
 @import "./bootstrap/bootstrap";
 
+/// tailwind classes
+
+.drop-shadow-md {
+  filter: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
+}
+
+.drop-shadow-lg {
+  filter: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+}
+
 /// Custom classes to reduce boilerplate
 .custom-btn-secondary {
   @extend .btn;
@@ -154,6 +164,7 @@ $utilities: map-merge(
   @extend .py-2;
   @extend .px-3;
   @extend .bg-charcoal-surface2;
+  @extend .drop-shadow-md;
 
   &:hover,
   &:focus,
@@ -172,6 +183,7 @@ $utilities: map-merge(
   @extend .card;
   @extend .border-0;
   @extend .rounded-5;
+  @extend .drop-shadow-lg;
 }
 
 .custom-card-body {
