--- a/assets/views/error.jet.html
+++ b/assets/views/error.jet.html
@@ -5,7 +5,7 @@
 
   <div class="col-12 col-lg-9">
 
-    <div class="custom-card bg-black mb-4 mb-lg-0">
+    <div class="custom-card bg-transparent mb-4 mb-lg-0">
       <div class="card-body border-0 rounded-5 bg-charcoal-surface1 p-4">
         <p>This is what you got instead:</p>
         <code>
