--- a/assets/css/bootstrap-style.css
+++ b/assets/css/bootstrap-style.css
@@ -14022,6 +14022,14 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+.drop-shadow-md, .custom-btn-secondary, .custom-btn-secondary-flex {
+  filter: drop-shadow(0 4px 3px rgba(0, 0, 0, 0.07)) drop-shadow(0 2px 2px rgba(0, 0, 0, 0.06));
+}
+
+.drop-shadow-lg, .custom-card {
+  filter: drop-shadow(0 10px 8px rgba(0, 0, 0, 0.04)) drop-shadow(0 4px 3px rgba(0, 0, 0, 0.1));
+}
+
 .custom-btn-secondary:hover, .custom-btn-secondary-flex:hover, .custom-btn-secondary:focus, .custom-btn-secondary-flex:focus, .custom-btn-secondary:active, .custom-btn-secondary-flex:active {
   background-color: #4c4c4c !important;
   color: white;
