--- a/assets/views/fragments/artwork.jet.html
+++ b/assets/views/fragments/artwork.jet.html
@@ -46,8 +46,8 @@
 </div>
 
   <!-- Artwork title and user information -->
-  <div class="custom-card bg-black mb-4">
-    <div class="card-body bg-charcoal-surface1 rounded-5 p-4">
+  <div class="custom-card bg-charcoal-surface1 mb-4">
+    <div class="card-body rounded-5 p-4">
       <div class="row mb-3">
         <!-- Artist avatar, artwork name, and artist name -->
         <div class="col-12 col-xl-8 mb-3 mb-xl-0">
