--- a/assets/css/bootstrap-style.scss
+++ b/assets/css/bootstrap-style.scss
@@ -317,6 +317,17 @@ h6 {
   display: inline;
 }
 
+.follow-spinner {
+  display: none;
+}
+.htmx-request .follow-spinner {
+  display: inline;
+}
+.htmx-request.follow-spinner {
+  display: inline;
+}
+
+
 /// Hide elements that require JS when scripting is disabled
 /// NOTE: This only seems to work when JS is actually disabled browser-wide, not via an extension like uBO
 ///       See the callout on https://developer.mozilla.org/en-US/docs/Web/CSS/@media/scripting
