--- a/assets/views/user.jet.html
+++ b/assets/views/user.jet.html
@@ -8,15 +8,21 @@
     <div class="custom-card bg-charcoal-surface1">
       <!-- Profile background image -->
       {{- if .User.BackgroundImage }}
-      <img src="{{ .User.BackgroundImage }}" alt="{{ .User.Name }} profile background image"
-           class="img-fluid w-100 rounded-bottom rounded-5 object-fit-cover mb-3"
-           style="max-height: 200px;" />
+      <div class="d-flex position-relative">
+        <img src="{{ .User.BackgroundImage }}" alt="{{ .User.Name }} profile background image"
+             class="img-fluid w-100 rounded-bottom rounded-5 object-fit-cover"
+             style="max-height: 200px;" />
+        <img src="{{.User.Avatar}}" alt="User avatar"
+             class="d-inline-block d-md-none border border-5 border-neutral-800 rounded-circle img-fluid object-fit-cover position-absolute z-1"
+             style="width: 150px; height: 150px; bottom: 0; left: 50%; transform: translate(-50%, 50%);">
+      </div>
+
       {{- end }}
-      <div class="custom-card-body p-4">
-        <div class="row g-4">
+      <div class="custom-card-body p-4 mt-5 mt-md-0">
+        <div class="row g-4 mt-3 mt-md-0">
           <!-- User avatar and external link to pixiv.net -->
           <!-- TODO: make these elements appear to the left alongside the user name and social media links -->
-          <div class="col-12 col-md-3">
+          <div class="col-12 col-md-3 d-none d-md-inline-block mt-0">
             <div class="d-flex flex-column align-items-center">
               <img src="{{.User.Avatar}}" alt="User avatar" class="rounded-circle img-fluid object-fit-cover mb-3" style="width: 150px; height: 150px">
 
@@ -25,12 +31,12 @@
               </a>
             </div>
           </div>
-          <!-- User name and social media links -->
-          <div class="col-12 col-md-9">
 
-            <!-- Follow and unfollow buttons -->
-            <div class="d-flex justify-content-start justify-content-xl-between align-items-center">
-              <h1>{{ .User.Name }}</h1>
+          <div class="col-12 col-md-9 mt-0">
+            <!-- User name and follow and unfollow buttons -->
+            <div class="d-flex flex-column flex-md-row justify-content-start flex-wrap justify-content-xl-between align-items-center mb-3 mb-md-2">
+              <h1 class="flex-grow-1 mb-2 mb-md-0">{{ .User.Name }}</h1>
+              <p class="d-inline-block d-md-none text-body-secondary text-center text-md-start">{{ .User.Following }} Following | {{ .User.MyPixiv }} MyPixiv</p>
               {{- if .User.IsFollowed == true && LoggedIn }}
               <button type="button" class="custom-btn-secondary text-nowrap me-2" hx-post="/self/unfollowUser/{{ .User.ID }}" hx-target="body" hx-indicator="#follow-spinner" hx-push-url="true">
                 <div class="d-flex">
@@ -43,6 +49,7 @@
                 </div>
               </button>
               {{- else }}
+              <!-- NOTE: bootstrap doesnt have custom hover states so the dropdown stays as a separate button -->
               <div class="btn-group">
                 <button type="button" class="custom-btn-secondary text-nowrap me-2">
                   <div class="d-flex">
@@ -56,17 +63,7 @@
                 <button type="button" class="custom-btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
                   <span class="visually-hidden">Toggle Dropdown</span>
                 </button>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a class="dropdown-item" href="#"
-                       hx-post="/self/followUser/{{ .User.ID }}"
-                       hx-target="body"
-                       hx-indicator="#follow-spinner"
-                       hx-push-url="true"
-                       hx-vals='{"private": false}'>
-                      Public
-                    </a>
-                  </li>
+                <ul class="dropdown-menu dropdown-menu-end shadow-md">
                   <li>
                     <a class="dropdown-item" href="#"
                        hx-post="/self/followUser/{{ .User.ID }}"
@@ -74,7 +71,7 @@
                        hx-indicator="#follow-spinner"
                        hx-push-url="true"
                        hx-vals='{"private": true}'>
-                      Private
+                      Follow privately
                     </a>
                   </li>
                 </ul>
@@ -82,8 +79,9 @@
               {{- end }}
             </div>
 
-            <p class="text-muted">{{ .User.Following }} Following | {{ .User.MyPixiv }} MyPixiv</p>
-            <div class="mb-3">
+            <!-- Social media links -->
+            <p class="d-none d-md-inline-block text-body-secondary text-center text-md-start">{{ .User.Following }} Following | {{ .User.MyPixiv }} MyPixiv</p>
+            <div class="d-flex justify-content-center justify-content-md-start mb-3">
               {{- if .User.Webpage }}
               <a href="{{ .User.Webpage }}" class="btn btn-custom-color text-body rounded-pill me-2">
                 <i class="bi bi-globe"></i>
@@ -103,6 +101,9 @@
             </div>
             <!-- User bio and frequently used tags -->
             <p class="mb-4">{{ raw: parsePixivRedirect(.User.Comment) }}</p>
+            <a href="https://pixiv.net/u/{{ .User.ID }}" class="d-inline-block d-md-none custom-btn-secondary btn-sm bg-charcoal-surface2 mb-3">
+              <i class="bi bi-box-arrow-up-right me-2"></i>pixiv.net
+            </a>
             <div class="custom-card bg-charcoal-surface2 p-4">
               <h3><i class="bi bi-tags-fill"></i> Frequently used tags</h3>
               <div class="d-flex flex-wrap">
