user-follow: mobile styling

--- a/assets/views/user.jet.html
+++ b/assets/views/user.jet.html
@@ -13,15 +13,12 @@
              class="img-fluid w-100 rounded-bottom rounded-5 object-fit-cover"
              style="max-height: 200px;" />
         <img src="{{.User.Avatar}}" alt="User avatar"
-             class="d-inline-block d-md-none border border-5 border-neutral-800 bottom-0 start-50 rounded-circle img-fluid object-fit-cover position-absolute z-1"
-             style="width: 120px; height: 120px; transform: translate(-50%, 50%);">
+             class="d-inline-block d-md-none border border-5 border-neutral-800 rounded-circle img-fluid object-fit-cover position-absolute z-1"
+             style="width: 150px; height: 150px; bottom: 0; left: 50%; transform: translate(-50%, 50%);">
       </div>
 
       {{- end }}
-      <div class="custom-card-body p-4 position-relative">
-        <div class="d-inline-block d-md-none position-absolute top-0 end-0 mt-4 me-4">
-          {{- include "fragments/followButtons" . }}
-        </div>
+      <div class="custom-card-body p-4 mt-5 mt-md-0">
         <div class="row g-4 mt-3 mt-md-0">
           <!-- User avatar and external link to pixiv.net -->
           <!-- TODO: make these elements appear to the left alongside the user name and social media links -->
@@ -37,12 +34,10 @@
 
           <div class="col-12 col-md-9 mt-0">
             <!-- User name and follow and unfollow buttons -->
-            <div class="d-flex flex-column flex-md-row justify-content-start flex-wrap justify-content-xl-between align-items-center mt-5 mt-md-0 mb-3 mb-md-2">
+            <div class="d-flex flex-column flex-md-row justify-content-start flex-wrap justify-content-xl-between align-items-center mb-3 mb-md-2">
               <h1 class="flex-grow-1 mb-2 mb-md-0">{{ .User.Name }}</h1>
-              <p class="d-inline-block d-md-none text-body-secondary text-center text-md-start mb-0">{{ .User.Following }} Following | {{ .User.MyPixiv }} MyPixiv</p>
-              <div class="d-none d-md-inline-block">
-                {{- include "fragments/followButtons" . }}
-              </div>
+              <p class="d-inline-block d-md-none text-body-secondary text-center text-md-start">{{ .User.Following }} Following | {{ .User.MyPixiv }} MyPixiv</p>
+              {{- include "fragments/followButtons" . }}
             </div>
 
             <!-- Social media links -->
@@ -67,6 +62,7 @@
             </div>
             <!-- User bio and frequently used tags -->
             <p class="mb-4">{{ raw: parsePixivRedirect(.User.Comment) }}</p>
+            {* NOTE: this button definitely needs to be in a different place *}
             <a href="https://pixiv.net/u/{{ .User.ID }}" class="d-inline-block d-md-none custom-btn-secondary btn-sm bg-charcoal-surface2 mb-3">
               <i class="bi bi-box-arrow-up-right me-2"></i>View on pixiv.net
             </a>
