--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -177,21 +177,21 @@
                   </div>
                   <form id="artwork-preview-form" hx-post="/settings/artworkPreview" hx-target="#artwork-preview-response" hx-swap="outerHTML">
                     <div class="form-check mb-3">
-                      <input class="form-check-input" type="radio" name="app" id="app-c" value="cover" disabled />
+                      <input class="form-check-input" type="radio" name="app" id="app-c" value="cover" />
                       <label class="form-check-label fw-bold" for="app-c"> Cover </label>
                       <div id="app-c-help" class="form-text">Open the previewer when you click into the thumbnails. This allows for quick previews without leaving the current page.</div>
                     </div>
                     <div class="form-check mb-3">
-                      <input class="form-check-input" type="radio" name="app" id="app-b" value="button" disabled />
+                      <input class="form-check-input" type="radio" name="app" id="app-b" value="button" />
                       <label class="form-check-label fw-bold" for="app-b"> Button </label>
                       <div id="app-b-help" class="form-text">Add a button at the bottom-right of the thumbnails and open the previewer when you click into it. This provides more control over when previews are shown.</div>
                     </div>
                     <div class="form-check mb-3">
-                      <input class="form-check-input" type="radio" name="app" id="app-d" value="disable" checked disabled />
+                      <input class="form-check-input" type="radio" name="app" id="app-d" value="disable" checked />
                       <label class="form-check-label fw-bold" for="app-d"> Disable </label>
                       <div id="app-d-help" class="form-text">No previewing. Clicking on thumbnails will directly open the full artwork page.</div>
                     </div>
-                    <button type="submit" class="custom-btn-secondary" disabled>Save</button>
+                    <button type="submit" class="custom-btn-secondary">Save</button>
                   </form>
                   <div id="artwork-preview-response"></div>
                 </li>
